Add a test to prove that simplistic protocol decodes are working

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,7 @@ CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs
 LDLIBS = -L$(libdir) -ltrace
 
-BINS = test-pcap-bpf test-event test-time test-dir #test-seek 
+BINS = test-pcap-bpf test-event test-time test-dir test-decode #test-seek 
 
 .PHONY: all clean distclean install depend test
 
