bitbuffer.h needs to be placed in the distribution tarball or it will FTBFS

--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libparser.la
 #include_HEADERS = parser.h
 
 #libparser_la_SOURCES = libconfig.c libconfig.h config_internal.h config.lexer.c config.parser.h configuration.h config.parser.c
-libparser_la_SOURCES = parser.lexer.c parser.tab.c parser.h bitbuffer.c
+libparser_la_SOURCES = parser.lexer.c parser.tab.c parser.h bitbuffer.c bitbuffer.h
 libparser_la_LIBADD = @ADD_LIBS@ @LEXLIB@
 libparser_la_LDFLAGS = @ADD_LDFLAGS@ -L../
 INCLUDES = @ADD_INCLS@ -I../ -I../../lib
