--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libparser.la
 #include_HEADERS = parser.h
 
-libparser_la_SOURCES = lexer.l parser.y bitbuffer.c bitbuffer.h grammer.h
+libparser_la_SOURCES = lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
 libparser_la_LIBADD = @ADD_LIBS@ @LEXLIB@
 libparser_la_LDFLAGS = @ADD_LDFLAGS@ -L../
 INCLUDES = @ADD_INCLS@ -I../ -I../../lib
