--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,11 @@
 LIBPACKETDUMP_DIR = libpacketdump
 TOOLS_DIR = tools
-SUBDIRS = lib docs $(LIBPACKETDUMP_DIR) $(TOOLS_DIR)
+if LIBTRACE_SWIG
+SWIG_DIR = swig
+endif
+SUBDIRS = lib docs $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) $(SWIG_DIR)
 
+ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = 1.5
 
 if HAS_DOXYGEN
