--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,10 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile 
 	tools/tracemerge/Makefile tools/tracereport/Makefile 
 	tools/tracertstats/Makefile tools/tracesplit/Makefile 
-	tools/tracestats/Makefile docs/libtrace.doxygen lib/libtrace.h])
+	tools/tracestats/Makefile 
+	docs/libtrace.doxygen 
+	lib/libtrace.h
+	swig/Makefile])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
@@ -45,6 +48,11 @@ AC_C_BIGENDIAN
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_SYS_LARGEFILE
+
+AC_PROG_LIBTOOL
+AM_PATH_PYTHON(2.3)
+AC_PROG_SWIG(1.3.21)
+SWIG_PYTHON
 
 # Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
@@ -208,11 +216,22 @@ fi
 
 AC_CHECK_LIB(z, gzopen)
 
+libtrace_swig=false;
+if test -n $SWIG; then
+	libtrace_swig=true;
+fi
+libtrace_python=false;
+if test -n "$PYTHON"; then
+	libtrace_python=true;
+fi
+
 AM_CONDITIONAL([HAVE_DAG], [test "$libtrace_dag" = true])
 AM_CONDITIONAL([DAG2_4], [test "$libtrace_dag2_4" = true])
 AM_CONDITIONAL([HAVE_ZLIB], [test "$ac_cv_lib_z_gzopen" = yes])
 AM_CONDITIONAL([HAVE_NETPACKET_PACKET_H], [test "$libtrace_netpacket_packet_h" = true])
 AM_CONDITIONAL([LIBGDC], [test "$ac_cv_header_gdc_h" = yes])
+AM_CONDITIONAL([LIBTRACE_SWIG], [test "$libtrace_swig" = true])
+#AM_CONDITIONAL([HAVE_PYTHON], [test "$libtrace_python" = true])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
@@ -256,3 +275,10 @@ else
 fi
 reportopt "Building man pages/documentation" $libtrace_doxygen
 
+if test x"$libtrace_swig" = xtrue; then
+	if test x"$libtrace_python"; then
+		AC_MSG_NOTICE([Building swig bindings for: python])
+	fi
+else
+	AC_MSG_NOTICE([Building swig bindings for: Nothing])
+fi
