setting the version number on libparser.

--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -3,7 +3,7 @@ lib_LTLIBRARIES = libparser.la
 
 libparser_la_SOURCES = lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
 libparser_la_LIBADD = @ADD_LIBS@ @LEXLIB@
-libparser_la_LDFLAGS = @ADD_LDFLAGS@ -L../
+libparser_la_LDFLAGS = @ADD_LDFLAGS@ -L../  -version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@	
 INCLUDES = @ADD_INCLS@ -I../ -I../../lib
 
 EXTRA_DIST=lexer.l parser.y
