--- a/configure.in
+++ b/configure.in
@@ -50,9 +50,18 @@ AC_HEADER_TIME
 AC_SYS_LARGEFILE
 
 AC_PROG_LIBTOOL
-AM_PATH_PYTHON(2.3)
-AC_PROG_SWIG(1.3.21)
-SWIG_PYTHON
+
+
+AC_ARG_ENABLE(swig,
+[  --disable-swig		don't generate python bindings],
+lt_use_python=true,lt_use_python=false)
+
+if test "x$lt_use_python" = "xtrue"
+then
+	AM_PATH_PYTHON(2.3)
+	AC_PROG_SWIG(1.3.21)
+	SWIG_PYTHON
+fi
 
 # Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
@@ -217,7 +226,7 @@ fi
 AC_CHECK_LIB(z, gzopen)
 
 libtrace_swig=false;
-if test -n $SWIG; then
+if test -n "$SWIG"; then
 	libtrace_swig=true;
 fi
 libtrace_python=false;
@@ -276,9 +285,11 @@ fi
 reportopt "Building man pages/documentation" $libtrace_doxygen
 
 if test x"$libtrace_swig" = xtrue; then
-	if test x"$libtrace_python"; then
+	if test x"$libtrace_python" = xtrue; then
 		AC_MSG_NOTICE([Building swig bindings for: python])
+	else
+		AC_MSG_NOTICE([Building swig bindings for: Nothing])
 	fi
 else
-	AC_MSG_NOTICE([Building swig bindings for: Nothing])
+	AC_MSG_NOTICE([Not building swig bindings])
 fi
