--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -429,17 +429,33 @@ typedef struct libtrace_pos
 
 /** 802.11 header */
 typedef struct libtrace_80211_t {
+#ifdef BYTE_ORDER == LITTLE_ENDIAN
         LT_BITFIELD32      protocol:2;
         LT_BITFIELD32      type:2;
         LT_BITFIELD32      subtype:4;
-        LT_BITFIELD32      to_ds:1;		/**< Packet to Distribution Service */
+#else
+	LT_BITFIELD32	   subtype:4;
+	LT_BITFIELD32      type:2;
+	LT_BITFIELD32      protocol:2;
+#endif
+        LT_BITFIELD32      to_ds:1;	/**< Packet to Distribution Service */
         LT_BITFIELD32      from_ds:1;	/**< Packet from Distribution Service */
         LT_BITFIELD32      more_frag:1;	/**< Packet has more fragments */
-        LT_BITFIELD32      retry:1;		/**< Packet is a retry */
+        LT_BITFIELD32      retry:1;	/**< Packet is a retry */
         LT_BITFIELD32      power:1;
         LT_BITFIELD32      more_data:1;
         LT_BITFIELD32      wep:1;
         LT_BITFIELD32      order:1;
+#else
+        LT_BITFIELD32      order:1;
+        LT_BITFIELD32      wep:1;
+        LT_BITFIELD32      more_data:1;
+        LT_BITFIELD32      power:1;
+        LT_BITFIELD32      retry:1;	/**< Packet is a retry */
+        LT_BITFIELD32      more_frag:1;	/**< Packet has more fragments */
+        LT_BITFIELD32      from_ds:1;	/**< Packet from Distribution Service */
+        LT_BITFIELD32      to_ds:1;	/**< Packet to Distribution Service */
+#endif
         uint16_t     duration;
         uint8_t      mac1[6];
         uint8_t      mac2[6];
