--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,20 +2,24 @@ lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h
 
 extra_DIST = format_template.c
-libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h \
-		format_erf.c format_pcap.c format_wag.c format_legacy.c \
-		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
-		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
-		linktypes.c protocols.c libtraceio.h format_duck.c 
 if HAVE_NETPACKET_PACKET_H
-libtrace_la_SOURCES+=format_linux.c
+NATIVEFORMATS=format_linux.c
+else
+NATIVEFORMATS=
 endif
 
 if HAVE_ZLIB
-libtrace_la_SOURCES+=libtraceio-zlib.c
+LIBTRACEIO=libtraceio-zlib.c
 else
-libtrace_la_SOURCES+=libtraceio-stdio.c
+LIBTRACEIO=libtraceio-stdio.c
 endif
+
+libtrace_la_SOURCES = $(LIBTRACEIO) trace.c fifo.c fifo.h common.h \
+		format_erf.c format_pcap.c format_wag.c format_legacy.c \
+		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
+		format_duck.c $(NATIVEFORMATS) \
+		parse_cmd.c parse_cmd.h libtrace_int.h lt_inttypes.h \
+		linktypes.c protocols.c libtraceio.h 
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
