Make automake-1.6 happier

--- a/tools/tracertstats/Makefile.am
+++ b/tools/tracertstats/Makefile.am
@@ -1,10 +1,14 @@
 bin_PROGRAMS = tracertstats
 
-OUTPUT_MODULES=output_csv.c output_html.c output_txt.c
 if LIBGDC
-OUTPUT_MODULES+=output_png.c
+LIBGDC_MODULES=output_png.c
 OUTPUT_PNG_LD=-lgdc
+else
+LIBGDC_MODULES=
+OUTPUT_PNG_LD=
 endif
+
+OUTPUT_MODULES=output_csv.c output_html.c output_txt.c $(LIBGDC_MODULES)
 
 include ../Makefile.tools
 tracertstats_SOURCES = tracertstats.c output.h output.c $(OUTPUT_MODULES)
