More automake-1.6 fixes

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -7,35 +7,73 @@ BIN_PROTOCOLS=
 TXT_PROTOCOLS=
 
 # Link layers supported
-BIN_PROTOCOLS+=link_0.la        # Legacy
-# 				# HDLC_POS
-BIN_PROTOCOLS+=link_2.la	# Ethernet
-TXT_PROTOCOLS+=link_3.protocol	# ATM
-BIN_PROTOCOLS+=link_4.la	# 802.11
-# 				# NONE
-TXT_PROTOCOLS+=link_6.protocol	# Linux SLL
-#				# PFLog
-# 				# Obsolete legacy
-BIN_PROTOCOLS+=link_9.la	# POS
-#				# Obsolete Legacy ATM
-BIN_PROTOCOLS+=link_10.la	# Obsolete Legacy Ethernet
-BIN_PROTOCOLS+=link_11.la	# 802.11 Prism
-#				# AAL5
-#				# Duck
+# Legacy
+BIN_PROTOCOLS+=link_0.la
+
+# HDLC_POS
+
+# Ethernet
+BIN_PROTOCOLS+=link_2.la
+
+# ATM
+TXT_PROTOCOLS+=link_3.protocol
+
+# 802.11
+BIN_PROTOCOLS+=link_4.la
+
+# NONE
+#
+
+# Linux SLL
+TXT_PROTOCOLS+=link_6.protocol	
+
+# PFLog
+#	
+
+# Obsolete legacy
+# 		
+
+# POS
+BIN_PROTOCOLS+=link_9.la
+
+# Obsolete Legacy ATM
+#				
+
+# Obsolete Legacy Ethernet
+BIN_PROTOCOLS+=link_10.la	
+
+# 802.11 Prisom
+BIN_PROTOCOLS+=link_11.la	
+
+# AAL5
+#			
+# Duck
+
+#				
 
 # Decoders for various ethertypes (in decimal)
-BIN_PROTOCOLS+=eth_2048.la		# IPv4
-BIN_PROTOCOLS+=eth_2054.la		# ARP
-TXT_PROTOCOLS+=eth_33024.protocol	# IPv6
+# IPv4
+BIN_PROTOCOLS+=eth_2048.la
+# ARP
+BIN_PROTOCOLS+=eth_2054.la	
+# IPv6
+TXT_PROTOCOLS+=eth_33024.protocol	
 
 # IP Protocol decoders
-BIN_PROTOCOLS+=ip_1.la  # ICMP
-BIN_PROTOCOLS+=ip_6.la  # TCP
-BIN_PROTOCOLS+=ip_17.la # UDP
-BIN_PROTOCOLS+=ip_33.la # DCCP
-TXT_PROTOCOLS+=ip_41.protocol # IPv6
-TXT_PROTOCOLS+=ip_58.protocol # ICMP6
-BIN_PROTOCOLS+=ip_132.la        # SCTP
+# ICMP
+BIN_PROTOCOLS+=ip_1.la
+# TCP
+BIN_PROTOCOLS+=ip_6.la
+# UDP
+BIN_PROTOCOLS+=ip_17.la
+# DCCP
+BIN_PROTOCOLS+=ip_33.la 
+# IPv6
+TXT_PROTOCOLS+=ip_41.protocol
+# ICMP6
+TXT_PROTOCOLS+=ip_58.protocol 
+# SCTP
+BIN_PROTOCOLS+=ip_132.la        
 
 # TCP protocol decoders
 # (tcp_*.la)
