Make parser build as part of libpacketdump rather than as a seperate library

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -98,15 +98,18 @@ ip_17_la_LDFLAGS=-module
 ip_33_la_LDFLAGS=-module
 ip_132_la_LDFLAGS=-module
 
-SUBDIRS = parser
-
-libpacketdump_la_SOURCES = libpacketdump.cc $(BIN_PROTOCOLS)
+libpacketdump_la_SOURCES = libpacketdump.cc \
+			parser/lexer.l \
+			parser/parser.y \
+			parser/bitbuffer.c \
+			parser/bitbuffer.h \
+			parser/grammer.h
 
 plugin_LTLIBRARIES = $(BIN_PROTOCOLS)
 dist_plugin_DATA = $(TXT_PROTOCOLS)
 
 INCLUDES= @ADD_INCLS@ -I../lib -I../
-libpacketdump_la_LIBADD = @ADD_LIBS@ -lparser
+libpacketdump_la_LIBADD = @ADD_LIBS@ 
 libpacketdump_la_LDFLAGS=\
         -version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@ \
         @ADD_LDFLAGS@ \
@@ -114,3 +117,6 @@ libpacketdump_la_LDFLAGS=\
 
 AM_CXXFLAGS=-g -Wall -DDIRNAME=\"$(plugindir)\" $(INCLUDES)
 
+EXTRA_DIST=lexer.l parser.y
+BUILT_SOURCES=parser.h
+AM_YFLAGS=-d
