--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -1,4 +1,6 @@
 
+# This library isn't installed, it is just a temporary file as part
+# of the build process, therefore it needs no version informatino
 noinst_LIBRARIES = libparser.a
 libparser_a_SOURCES = lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
 libparser_a_LIBADD = @ADD_LIBS@ 
