--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@
 # Now you only need to update the version number in two places - below,
 # and in the README
 
-AC_INIT(libtrace,3.0.0-beta4,[contact@wand.net.nz],libtrace)
+AC_INIT([libtrace],[3.0.0-beta4],[contact@wand.net.nz],[libtrace])
 
 LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
@@ -17,6 +17,7 @@ AC_DEFINE([LIBTRACE_MID],${LIBTRACE_MID},[libtrace mid version])
 AC_DEFINE([LIBTRACE_MINOR],${LIBTRACE_MINOR},[libtrace minor version])
 
 AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
+	libpacketdump/parser/Makefile
 	tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile 
 	tools/tracemerge/Makefile tools/tracereport/Makefile 
 	tools/tracertstats/Makefile tools/tracesplit/Makefile 
@@ -28,13 +29,11 @@ dnl GNU C library
 dnl AC_GNU_SOURCE
 
 
-AM_CONFIG_HEADER(config.h)
-#AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_HEADERS([config.h])
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
-AC_PROG_LIBTOOL
 AC_PROG_YACC
 AM_PROG_LEX
 
@@ -49,7 +48,6 @@ AC_HEADER_TIME
 AC_SYS_LARGEFILE
 
 AC_PROG_LIBTOOL
-
 
 AC_ARG_ENABLE(swig,
 [  --disable-swig		don't generate python bindings],
@@ -133,8 +131,7 @@ AC_CHECK_FUNCS(pcap_inject pcap_sendpacket pcap_setnonblock)
 
 # configure time options for man pages
 AC_ARG_WITH(man,
-	    AC_HELP_STRING([--with-man],
-			   [install man pages by default]),
+	    AS_HELP_STRING(--with-man,install man pages by default),
 
 	     if test "$withval" = yes
 	     then
@@ -149,8 +146,7 @@ AC_PROG_CXX
 # configure time options for use of DAG cards
 # borrowed from libpcap!
 AC_ARG_WITH(dag, 
-	    AC_HELP_STRING([--with-dag[=DIR]],
-			   [include DAG support (located in directory DIR, if supplied)]),
+	    AS_HELP_STRING(--with-dag[=DIR],include DAG support (located in directory DIR, if supplied)),
 [
         if test "$withval" = no
         then
