Fixed build error for the libpacketdump parser which crops up if you specify --with-dag Might have also added/removed some braces and newlines that I couldn't be bothered reverting before commit :]

--- a/libpacketdump/parser/Makefile.am
+++ b/libpacketdump/parser/Makefile.am
@@ -3,7 +3,7 @@
 # of the build process, therefore it needs no version informatino
 noinst_LIBRARIES = libparser.a
 libparser_a_SOURCES = lexer.l parser.y bitbuffer.c bitbuffer.h grammar.h
-libparser_a_LIBADD = @ADD_LIBS@ 
+#libparser_a_LIBADD = @ADD_LIBS@ 
 INCLUDES = @ADD_INCLS@ -I../ -I../../lib
 
 EXTRA_DIST=lexer.l parser.y
